# libomptarget

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  circle.yml
DevRTLs/: CMakeLists.txt
DevRTLs/nvptx/: CMakeLists.txt
DevRTLs/spark/: CMakeLists.txt  build.sbt
DevRTLs/spark/src/main/scala/org/llvm/openmp/: AddressTable.scala  CloudFileSystem.scala  CloudInfo.scala  HdfsInfo.scala  Util.scala
RTLs/: CMakeLists.txt
RTLs/cloud/: CMakeLists.txt
RTLs/cloud/inih/: INIReader.cpp  INIReader.h  ini.h
RTLs/cloud/restclient/: restclient.cpp
RTLs/cloud/restclient/restclient-cpp/: restclient.h
RTLs/cloud/src/: rtl.cpp  rtl.h
RTLs/cloud/src/providers/: amazon.cpp  amazon.h  azure.cpp  azure.h  generic.cpp  generic.h  google.cpp  google.h  local.cpp  local.h  provider.h
RTLs/cloud/src/util/: cloud_compression.cpp  cloud_ssh.cpp  cloud_ssh.h  cloud_util.cpp  cloud_util.h  compression.cpp  compression.h  ssh.cpp  ssh.h
RTLs/cuda/: CMakeLists.txt
RTLs/generic-64bit/src/: rtl.cpp
RTLs/ppc64/: CMakeLists.txt
RTLs/ppc64le/: CMakeLists.txt
RTLs/x86_64/: CMakeLists.txt
cmake/Modules/: FindHDFS.cmake  FindHDFS3.cmake  FindLibSSH.cmake  FindSBT.cmake
src/: omptarget.cpp  omptarget.h  targets_info.cpp
